--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
- 
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <div class="container">
-        <h1 class="center">Alura Typer</h1>
-        <p class="frase center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <button id=botao1 > manda requisição </button>
-       
+    <div class="Chat some">
+        <div class="TelaBot ">
+            <div class="Cabecalho">cabeçalho</div>
+            <div class="Conversa">conversa</div>
+        </div>
     </div>
-
+<div class="Bot">
+    <div class="TextoBolinha">
+        <a class="">Texto do lado </a>
+   </div>
+   <div class="Bolinha">
+    <p class="Texto"> teste</p> 
+    </div>
+</div>
    
     <script src="wesley-pt.js"></script>
     
