--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <title>Alura Typer</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
-<body>
+<body class="body">
    
     <div class="Bot">
         <div class="TextoBolinha">
              <p>Vamos conversar sobre o seu projeto de adequação à LGPD?</p>
         </div>
         <div class="Bolinha">
-         <p class="Texto"> teste</p> 
+         <img class="Foto" src="foto.jpg" />
         </div>
-     </div>
+    </div>
 
     
         <div class="TelaBot some">
             <div class="Cabecalho">
-                <div>
-                    <p class="Foto">A</p>
+                <div class="FotoCab">
+                    <img class="Foto2" src="foto.jpg"/>
+                    <p class="PFoto">Wesley Souza</p>
                 </div>
                 <div class="Sair">
                     <p> X </p>   
