Implementado a API de configuraçãp

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    
     <div class="Bot">
         <div class="TextoBolinha">
-             <p>Vamos conversar sobre o seu projeto de adequação à LGPD?</p>
+             <p class="PLateral"></p>
         </div>
         <div class="Bolinha">
-         <img class="Foto" src="foto.jpg" />
+         <img class="Foto" />
         </div>
     </div>
 
@@ -20,16 +20,15 @@
         <div class="TelaBot some">
             <div class="Cabecalho">
                 <div class="FotoCab">
-                    <img class="Foto2" src="foto.jpg"/>
-                    <p class="PFoto">Wesley Souza</p>
                 </div>
+                <p class="PFoto">Wesley Souza</p>
                 <div class="Sair">
                     <p> X </p>   
                 </div>
             </div>
             <div class="Conversa">
                  <div class="MenEu">
-                    <p>Vamos conversar sobre o seu projeto de adequação à LGPD?</p>
+                    <p class="Balao1"></p>
                  </div>
                  <div class="MenCli">
                     <p>Olá, vamos sim</p>
