Save no storage

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <p> X </p>   
                 </div>
             </div>
-            <div class="Conversa">
+            <div class="Conversa" >
                  <div class="MenEu">
                     <p class="Balao1"></p>
                  </div>
             </div>
-            <input  class="Campo" />
+            <input  class="Campo" placeholder="Digite sua pergunta" />
         </div>
     
 
