Botão de minimizar e refresh da pagina

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
                 <div class="FotoCab">
                 </div>
                 <p class="PFoto">Wesley Souza</p>
-                <div class="Sair">
-                    <p> X </p>   
+                <div class="Finalizar">
+                    <p class="Fechar"> X </p>   
                 </div>
+                <div class="Sair">
+                    <p> _ </p>   
+                </div>
+
             </div>
             <div class="Conversa" >
                  <div class="MenEu">
